# logic_regression

./: README.md  pyproject.toml
dmia/: gradient_check.py
dmia/classifiers/: logistic_regression.py
