[tool.poetry]
name = "logic-regression"
version = "0.1.0"
description = ""
authors = ["vtb4093044@corp.dev.vtb <arushanova@dev.vtb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.3.0"
scipy = "^1.16.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
